syntax = "proto3";

option java_multiple_files = true;
package communication;
import "google/protobuf/timestamp.proto";

enum Role {
  GUEST = 0;
  HOST = 1;
}

message UserDetailsRequest {
  string username = 1;
}

message UserDetailsResponse {
  uint64 id = 1;
  string username = 2;
  string password = 3;
  Role role = 4;
  uint32 penalties = 5;
}

message RegisterUser {
  string username = 1;
  string location = 2;
  string email = 3;
  string firstName = 4;
  string lastName = 5;
  string phoneNumber = 6;
  string password = 7;
  uint32 penalties = 8;
  Role role = 9;
}

message RegisterUserAvgGrade {
  string username = 1;
  string location = 2;
  string email = 3;
  string firstName = 4;
  string lastName = 5;
  string phoneNumber = 6;
  string password = 7;
  uint32 penalties = 8;
  Role role = 9;
  float avgGrade = 10;
}

message User {
  string username = 1;
  string location = 2;
  string email = 3;
  string firstName = 4;
  string lastName = 5;
  string phoneNumber = 6;
  string password = 7;
  uint32 penalties = 8;
  uint64 id = 9;
  Role role = 10;
}

message UserList {
  repeated User users = 1;
}

message EmptyRequest {}

message UserIdRequest {
  uint64 id = 1;
}

message Rate {
  uint64 hostId = 1;
  uint64 guestId = 2;
  uint32 rateValue = 3;
  string rateDate = 4;
  uint64 id = 5;
}

message ListRate {
  repeated Rate rates = 1;
}

message AccommodationRate {
  uint64 hostId = 1;
  uint64 guestId = 2;
  uint32 rateValue = 3;
  string rateDate = 4;
  uint64 id = 5;
  uint64 accommodationId = 6;
}

message AccommodationWithGrade {
  int64 id = 1;
  string name = 2;
  string location = 3;
  string facilities = 4;
  string photo = 5;
  int32 minGuests = 6;
  int32 maxGuests = 7;
  int32 availableBeds = 8;
  int64 accommodationGradeId = 9;
  bool isAuto = 10;
  int64 userId = 11;
  float avgGrade = 12;
}

message ListAccommodationRate{
  repeated AccommodationRate accommodationRates = 1;
}

message MessageResponse {
  string message = 1;
}

